--- a/packages/mdc-select/_variables.scss
+++ b/packages/mdc-select/_variables.scss
@@ -26,7 +26,6 @@
 $mdc-select-arrow-padding: 52px !default;
 $mdc-select-label-padding: 16px !default;
 $mdc-select-height: 56px !default;
-$mdc-select-icon-padding: 48px !default;
 
 $mdc-select-ink-color: rgba(mdc-theme-prop-value(on-surface), .87) !default;
 $mdc-select-dropdown-color: mdc-theme-prop-value(on-surface) !default;
@@ -57,7 +56,7 @@ $mdc-select-label-position-y: 70% !default;
 $mdc-select-outline-label-offset: 16px !default;
 $mdc-select-outlined-label-position-y: 130% !default;
 $mdc-select-outlined-dense-label-position-y: 110% !default;
-$mdc-select-outlined-with-leading-icon-label-position-x: 32px !default;
+$mdc-select-outlined-with-leading-icon-label-position-x: 36px !default;
 
 $mdc-select-dropdown-transition-duration: 150ms !default;
 
