--- a/packages/mdc-select/icon/_mixins.scss
+++ b/packages/mdc-select/icon/_mixins.scss
@@ -32,32 +32,6 @@
 
 // Private mixins
 
-@mixin mdc-select-icon_ {
-  @include mdc-select-icon-color(on-surface);
-
-  .mdc-select__icon {
-    display: inline-block;
-    position: absolute;
-    bottom: 16px;
-    box-sizing: border-box;
-    width: $mdc-select-icon-size;
-    height: $mdc-select-icon-size;
-    border: none;
-    background-color: transparent;
-    fill: currentColor;
-    opacity: $mdc-select-icon-opacity;
-    text-decoration: none;
-    cursor: pointer;
-    user-select: none;
-  }
-}
-
-@mixin mdc-select-icon-color_($color) {
-  .mdc-select__icon {
-    @include mdc-theme-prop(color, $color);
-  }
-}
-
 @mixin mdc-select-icon-horizontal-position_($iconPosition, $inputPadding) {
   .mdc-select__icon {
     @include mdc-rtl-reflexive-position(left, $iconPosition);
@@ -67,5 +41,11 @@
   .mdc-select__native-control,
   .mdc-select__selected-text {
     @include mdc-rtl-reflexive-property(padding, $inputPadding /* left */, $mdc-select-icon-right-padding /* right */);
+  }
+}
+
+@mixin mdc-select-icon-color_($color) {
+  .mdc-select__icon {
+    @include mdc-theme-prop(color, $color);
   }
 }
